src/test/deca/context/invalid/objet/field_already.deca
// This field is already defined in this scope
// Description : Test with a field declared twice
// Resultat : error ligne 7

class A {
    int x;
    int x;
}